# MCP-Client

./: README.md  client.py  main.py  pyproject.toml
src/: __init__.py
src/api/: __init__.py  models.py  routes.py
src/cli/: __init__.py  interactive.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  client.py  memory.py  orchestrator.py
src/tools/: __init__.py  bridge.py  utils.py
test/: test_neondb_connection.py
